--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -14,6 +14,8 @@ http {
     listen <%= ENV["PORT"] %>;
     server_name  _;
     root /app/www;
-    index index.html;
+    location / {
+      error_page 404 =200 /index.html;
+    }
   }
 }
