--- a/conf/nginx.conf.erb
+++ b/conf/nginx.conf.erb
@@ -11,7 +11,12 @@ http {
   types_hash_max_size 2048;
   include mime.types;
   server {
-    return 301 $scheme://$http_host$1;
+    location ~ ^.*[^/]$ {
+      try_files $uri @rewrite;
+    }
+    location @rewrite {
+      return 302 $scheme://$http_host$uri/;
+    }
     listen <%= ENV["PORT"] %>;
     server_name  _;
     <% if ENV["ROOT"] %>
